--- a/gallery.html
+++ b/gallery.html
@@ -73,76 +73,167 @@
         <p style="color:#d2c9f5;">Short clips from shows and rehearsals. For full-length promo reels, contact us directly.</p>
 
         <div class="video-grid mt-3">
-          <figure class="video-wrapper">
-            <video controls preload="metadata">
-              <source src="video/video-01.mp4" type="video/mp4">
-              Your browser does not support the video tag.
-            </video>
-            <figcaption class="seo-text-hidden">Whimsy Entertainment circus clown and juggler performing live at a Virginia Beach kids party – family-friendly circus entertainment with juggling, balloon twisting and silly interaction for children and parents.</figcaption>
-          </figure>
-          <figure class="video-wrapper">
-            <video controls preload="metadata">
-              <source src="video/video-02.mp4" type="video/mp4">
-              Your browser does not support the video tag.
-            </video>
-            <figcaption class="seo-text-hidden">Party entertainment clip from a Virginia Beach event showing Whimsy Entertainment leading interactive circus games, juggling and clown-style character work for kids birthday parties and family gatherings in Virginia.</figcaption>
-          </figure>
-          <figure class="video-wrapper">
-            <video controls preload="metadata">
-              <source src="video/video-03.mp4" type="video/mp4">
-              Your browser does not support the video tag.
-            </video>
-            <figcaption class="seo-text-hidden">Whimsy Entertainment fire and LED performance for special events in Virginia, perfect for festivals, nightlife venues and adults-only parties that want unique circus and sideshow-style entertainment.</figcaption>
-          </figure>
-          <figure class="video-wrapper">
-            <video controls preload="metadata">
-              <source src="video/video-04.mp4" type="video/mp4">
-              Your browser does not support the video tag.
-            </video>
-            <figcaption class="seo-text-hidden">Virginia Beach community event footage featuring Whimsy Entertainment providing roaming clown, juggler and balloon artist services, greeting guests, posing for photos and keeping families engaged.</figcaption>
-          </figure>
-          <figure class="video-wrapper">
-            <video controls preload="metadata">
-              <source src="video/video-05.mp4" type="video/mp4">
-              Your browser does not support the video tag.
-            </video>
-            <figcaption class="seo-text-hidden">Kids party entertainment highlight reel from Whimsy Entertainment in Virginia with juggling lessons, bubble play, balloon animals and clown comedy to support parents and party planners looking for unique activities.</figcaption>
-          </figure>
-          <figure class="video-wrapper">
-            <video controls preload="metadata">
-              <source src="video/video-06.mp4" type="video/mp4">
-              Your browser does not support the video tag.
-            </video>
-            <figcaption class="seo-text-hidden">Whimsy Entertainment stage performance at a festival in Virginia Beach combining circus skills, theatrical clown movement and playful crowd interaction for audiences of all ages.</figcaption>
-          </figure>
-          <figure class="video-wrapper">
-            <video controls preload="metadata">
-              <source src="video/video-07.mp4" type="video/mp4">
-              Your browser does not support the video tag.
-            </video>
-            <figcaption class="seo-text-hidden">Whimsy Entertainment circus clown and juggler performing live at a Virginia Beach kids party – family-friendly circus entertainment with juggling, balloon twisting and silly interaction for children and parents.</figcaption>
-          </figure>
-          <figure class="video-wrapper">
-            <video controls preload="metadata">
-              <source src="video/video-08.mp4" type="video/mp4">
-              Your browser does not support the video tag.
-            </video>
-            <figcaption class="seo-text-hidden">Party entertainment clip from a Virginia Beach event showing Whimsy Entertainment leading interactive circus games, juggling and clown-style character work for kids birthday parties and family gatherings in Virginia.</figcaption>
-          </figure>
-          <figure class="video-wrapper">
-            <video controls preload="metadata">
-              <source src="video/video-09.mp4" type="video/mp4">
-              Your browser does not support the video tag.
-            </video>
-            <figcaption class="seo-text-hidden">Whimsy Entertainment fire and LED performance for special events in Virginia, perfect for festivals, nightlife venues and adults-only parties that want unique circus and sideshow-style entertainment.</figcaption>
-          </figure>
-          <figure class="video-wrapper">
-            <video controls preload="metadata">
-              <source src="video/video-10.mp4" type="video/mp4">
-              Your browser does not support the video tag.
-            </video>
-            <figcaption class="seo-text-hidden">Virginia Beach community event footage featuring Whimsy Entertainment providing roaming clown, juggler and balloon artist services, greeting guests, posing for photos and keeping families engaged.</figcaption>
-          </figure>
+<!-- 1 -->
+<figure class="video-wrapper">
+  <iframe
+    width="100%" height="315"
+    src="https://www.youtube.com/embed/rr2tB2_M77s"
+    title="YouTube video player"
+    frameborder="0"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+    allowfullscreen
+    referrerpolicy="strict-origin-when-cross-origin">
+  </iframe>
+  <figcaption class="seo-text-hidden">
+    Whimsy Entertainment circus clown and juggler performing live at a Virginia Beach kids party – family-friendly circus entertainment with juggling, balloon twisting and silly interaction for children and parents.
+  </figcaption>
+</figure>
+
+<!-- 2 -->
+<figure class="video-wrapper">
+  <iframe
+    width="100%" height="315"
+    src="https://www.youtube.com/embed/eMMZJOR6O5M"
+    title="YouTube video player"
+    frameborder="0"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+    allowfullscreen
+    referrerpolicy="strict-origin-when-cross-origin">
+  </iframe>
+  <figcaption class="seo-text-hidden">
+    Party entertainment clip from a Virginia Beach event showing Whimsy Entertainment leading interactive circus games, juggling and clown-style character work for kids birthday parties and family gatherings in Virginia.
+  </figcaption>
+</figure>
+
+<!-- 3 -->
+<figure class="video-wrapper">
+  <iframe
+    width="100%" height="315"
+    src="https://www.youtube.com/embed/Xl5CyALEsm4"
+    title="YouTube video player"
+    frameborder="0"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+    allowfullscreen
+    referrerpolicy="strict-origin-when-cross-origin">
+  </iframe>
+  <figcaption class="seo-text-hidden">
+    Whimsy Entertainment fire and LED performance for special events in Virginia, perfect for festivals, nightlife venues and adults-only parties that want unique circus and sideshow-style entertainment.
+  </figcaption>
+</figure>
+
+<!-- 4 -->
+<figure class="video-wrapper">
+  <iframe
+    width="100%" height="315"
+    src="https://www.youtube.com/embed/o_VHrfHG1f0"
+    title="YouTube video player"
+    frameborder="0"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+    allowfullscreen
+    referrerpolicy="strict-origin-when-cross-origin">
+  </iframe>
+  <figcaption class="seo-text-hidden">
+    Virginia Beach community event footage featuring Whimsy Entertainment providing roaming clown, juggler and balloon artist services, greeting guests, posing for photos and keeping families engaged.
+  </figcaption>
+</figure>
+
+<!-- 5 -->
+<figure class="video-wrapper">
+  <iframe
+    width="100%" height="315"
+    src="https://www.youtube.com/embed/Mn0cMw0B3GA"
+    title="YouTube video player"
+    frameborder="0"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+    allowfullscreen
+    referrerpolicy="strict-origin-when-cross-origin">
+  </iframe>
+  <figcaption class="seo-text-hidden">
+    Kids party entertainment highlight reel from Whimsy Entertainment in Virginia with juggling lessons, bubble play, balloon animals and clown comedy to support parents and party planners looking for unique activities.
+  </figcaption>
+</figure>
+
+<!-- 6 -->
+<figure class="video-wrapper">
+  <iframe
+    width="100%" height="315"
+    src="https://www.youtube.com/embed/wK7KHajuYoE"
+    title="YouTube video player"
+    frameborder="0"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+    allowfullscreen
+    referrerpolicy="strict-origin-when-cross-origin">
+  </iframe>
+  <figcaption class="seo-text-hidden">
+    Whimsy Entertainment stage performance at a festival in Virginia Beach combining circus skills, theatrical clown movement and playful crowd interaction for audiences of all ages.
+  </figcaption>
+</figure>
+
+<!-- 7 -->
+<figure class="video-wrapper">
+  <iframe
+    width="100%" height="315"
+    src="https://www.youtube.com/embed/pCTefH7vws0"
+    title="YouTube video player"
+    frameborder="0"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+    allowfullscreen
+    referrerpolicy="strict-origin-when-cross-origin">
+  </iframe>
+  <figcaption class="seo-text-hidden">
+    Whimsy Entertainment circus clown and juggler performing live at a Virginia Beach kids party – family-friendly circus entertainment with juggling, balloon twisting and silly interaction for children and parents.
+  </figcaption>
+</figure>
+
+<!-- 8 -->
+<figure class="video-wrapper">
+  <iframe
+    width="100%" height="315"
+    src="https://www.youtube.com/embed/JBVHc0ZePcQ"
+    title="YouTube video player"
+    frameborder="0"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+    allowfullscreen
+    referrerpolicy="strict-origin-when-cross-origin">
+  </iframe>
+  <figcaption class="seo-text-hidden">
+    Party entertainment clip from a Virginia Beach event showing Whimsy Entertainment leading interactive circus games, juggling and clown-style character work for kids birthday parties and family gatherings in Virginia.
+  </figcaption>
+</figure>
+
+<!-- 9 -->
+<figure class="video-wrapper">
+  <iframe
+    width="100%" height="315"
+    src="https://www.youtube.com/embed/FpTQ7Wck1hY"
+    title="YouTube video player"
+    frameborder="0"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+    allowfullscreen
+    referrerpolicy="strict-origin-when-cross-origin">
+  </iframe>
+  <figcaption class="seo-text-hidden">
+    Whimsy Entertainment fire and LED performance for special events in Virginia, perfect for festivals, nightlife venues and adults-only parties that want unique circus and sideshow-style entertainment.
+  </figcaption>
+</figure>
+
+<!-- 10 -->
+<figure class="video-wrapper">
+  <iframe
+    width="100%" height="315"
+    src="https://www.youtube.com/embed/xIIUiZq0I6Y"
+    title="YouTube video player"
+    frameborder="0"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+    allowfullscreen
+    referrerpolicy="strict-origin-when-cross-origin">
+  </iframe>
+  <figcaption class="seo-text-hidden">
+    Virginia Beach community event footage featuring Whimsy Entertainment providing roaming clown, juggler and balloon artist services, greeting guests, posing for photos and keeping families engaged.
+  </figcaption>
+</figure>
+
+
           <figure class="video-wrapper">
             <video controls preload="metadata">
               <source src="video/video-11.mp4" type="video/mp4">
