--- a/contact.html
+++ b/contact.html
@@ -58,10 +58,12 @@
           </div>
 
           <!-- CONTACT FORM -->
-         <form id="whimsyForm" action="https://formsubmit.co/neonravee@yahoo.com" method="POST">
+       <form action="https://api.web3forms.com/submit" method="POST">
+  <input type="hidden" name="access_key" value="f93c3493-1436-4440-bacb-a372efd7e8fd">
   <input type="hidden" name="_subject" value="New Whimsy Entertainment inquiry">
   <input type="hidden" name="_captcha" value="false">
   <input type="hidden" name="_template" value="table">
+  <input type="checkbox" name="botcheck" class="hidden" style="display:none;">
 
   <div class="mb-3">
     <label class="form-label">Your Name *</label>
