--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <!doctype html>
 <html lang="en">
   <head>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-34Q15NH8XG"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-34Q15NH8XG');
+</script>
     <meta charset="utf-8">
     <title>Virginia Beach Party Entertainer | Whimsy Entertainment Circus, Clown, Bubbles & Fire Shows</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
