--- a/gallery.html
+++ b/gallery.html
@@ -85,7 +85,7 @@
 <figure class="video-wrapper">
   <iframe
     width="100%" height="315"
-    src="https://www.youtube.com/embed/rr2tB2_M77s"
+    src="https://www.youtube.com/embed/li6hcPi_ki4"
     title="YouTube video player"
     frameborder="0"
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -101,7 +101,7 @@
 <figure class="video-wrapper">
   <iframe
     width="100%" height="315"
-    src="https://www.youtube.com/embed/eMMZJOR6O5M"
+    src="https://www.youtube.com/embed/7bY5vvyF8v8"
     title="YouTube video player"
     frameborder="0"
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -117,7 +117,7 @@
 <figure class="video-wrapper">
   <iframe
     width="100%" height="315"
-    src="https://www.youtube.com/embed/Xl5CyALEsm4"
+    src="https://www.youtube.com/embed/g04Ov15ZFVs"
     title="YouTube video player"
     frameborder="0"
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -133,7 +133,7 @@
 <figure class="video-wrapper">
   <iframe
     width="100%" height="315"
-    src="https://www.youtube.com/embed/o_VHrfHG1f0"
+    src="https://www.youtube.com/embed/VApAR2bMhkQ"
     title="YouTube video player"
     frameborder="0"
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -149,7 +149,7 @@
 <figure class="video-wrapper">
   <iframe
     width="100%" height="315"
-    src="https://www.youtube.com/embed/Mn0cMw0B3GA"
+    src="https://www.youtube.com/embed/6EN1InmWY04"
     title="YouTube video player"
     frameborder="0"
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -165,7 +165,7 @@
 <figure class="video-wrapper">
   <iframe
     width="100%" height="315"
-    src="https://www.youtube.com/embed/wK7KHajuYoE"
+    src="https://www.youtube.com/embed/_YDQHUdkED4"
     title="YouTube video player"
     frameborder="0"
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -181,7 +181,7 @@
 <figure class="video-wrapper">
   <iframe
     width="100%" height="315"
-    src="https://www.youtube.com/embed/pCTefH7vws0"
+    src="https://www.youtube.com/embed/Ur3miZK4XwU"
     title="YouTube video player"
     frameborder="0"
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -197,7 +197,7 @@
 <figure class="video-wrapper">
   <iframe
     width="100%" height="315"
-    src="https://www.youtube.com/embed/JBVHc0ZePcQ"
+    src="https://www.youtube.com/embed/yHwCGF_UHRo"
     title="YouTube video player"
     frameborder="0"
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -205,7 +205,7 @@
     referrerpolicy="strict-origin-when-cross-origin">
   </iframe>
   <figcaption class="seo-text-hidden">
-    Party entertainment clip from a Virginia Beach event showing Whimsy Entertainment leading interactive circus games, juggling and clown-style character work for kids birthday parties and family gatherings in Virginia.
+    Party entertainment clip from a Virginia Beach event showing Whimsy Entertainment fire breathing and fire performance during a circus-style show for family festivals and evening celebrations.
   </figcaption>
 </figure>
 
@@ -213,7 +213,7 @@
 <figure class="video-wrapper">
   <iframe
     width="100%" height="315"
-    src="https://www.youtube.com/embed/FpTQ7Wck1hY"
+    src="https://www.youtube.com/embed/Atpw4G6MYU0"
     title="YouTube video player"
     frameborder="0"
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -221,7 +221,7 @@
     referrerpolicy="strict-origin-when-cross-origin">
   </iframe>
   <figcaption class="seo-text-hidden">
-    Whimsy Entertainment fire and LED performance for special events in Virginia, perfect for festivals, nightlife venues and adults-only parties that want unique circus and sideshow-style entertainment.
+    Whimsy Entertainment fire and LED show featuring dramatic fire eating, fire spinning and flow arts suitable for festivals, special events and nightlife entertainment in Virginia.
   </figcaption>
 </figure>
 
@@ -229,7 +229,7 @@
 <figure class="video-wrapper">
   <iframe
     width="100%" height="315"
-    src="https://www.youtube.com/embed/xIIUiZq0I6Y"
+    src="https://www.youtube.com/embed/aw5loEtDr1g"
     title="YouTube video player"
     frameborder="0"
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -237,9 +237,10 @@
     referrerpolicy="strict-origin-when-cross-origin">
   </iframe>
   <figcaption class="seo-text-hidden">
-    Virginia Beach community event footage featuring Whimsy Entertainment providing roaming clown, juggler and balloon artist services, greeting guests, posing for photos and keeping families engaged.
+    Virginia Beach event clip featuring Whimsy Entertainment character performers, juggling and playful clown interaction bringing family-friendly circus fun to community gatherings.
   </figcaption>
 </figure>
+
 
 
           <figure class="video-wrapper">
