--- a/services.html
+++ b/services.html
@@ -10,9 +10,9 @@
   gtag('config', 'G-34Q15NH8XG');
 </script>
     <meta charset="utf-8">
-    <title>Party Entertainment Services | Whimsy Entertainment Virginia Beach Circus, Bubbles, Balloons & Fire</title>
+    <title>Party Entertainment Services | Whimsy Entertainment Northeast Ohio (near Cleveland & Columbus), Detroit & Pittsburgh Circus, Bubbles, Balloons & Fire</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Explore Whimsy Entertainment services in Virginia Beach and across Virginia, including kids birthday party entertainment, balloon twisting, face painting, juggling workshops, circus sideshow, LED and fire shows for events. Book giant bubble shows, face painting and balloon twisting in Virginia Beach and across Virginia. Fire eating, fire breathing, LED prop manipulation and fire object manipulation for festivals and nightlife. Sideshow acts such as dangerous blockhead, dangerous bed of nails and mime entertainment for events">
+    <meta name="description" content="Explore Whimsy Entertainment services serving Northeast Ohio (near Cleveland & Columbus), Detroit and Pittsburgh, including kids birthday party entertainment, balloon twisting, face painting, juggling workshops, circus sideshow, LED and fire shows for events. Book giant bubble shows, face painting and balloon twisting across Ohio with availability for Detroit and Pittsburgh bookings. Fire eating, fire breathing, LED prop manipulation and fire object manipulation for festivals and nightlife.">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
   
@@ -26,7 +26,7 @@
       "name": "What kinds of events do you perform at?",
       "acceptedAnswer": {
         "@type": "Answer",
-        "text": "Whimsy Entertainment is available for children’s birthday parties, family events, school and library shows, community festivals, corporate events, holiday parties, nightlife and concerts, private parties and more in Virginia Beach, across Virginia and beyond."
+        "text": "Whimsy Entertainment is available for children\u2019s birthday parties, family events, school and library shows, community festivals, corporate events, holiday parties, nightlife and concerts, private parties and more in Northeast Ohio (near Cleveland & Columbus), across Ohio and beyond. Serving Northeast Ohio (near Cleveland & Columbus), plus Detroit & Pittsburgh bookings."
       }
     },
     {
@@ -34,15 +34,15 @@
       "name": "What acts do you offer?",
       "acceptedAnswer": {
         "@type": "Answer",
-        "text": "Saria “Blu” Braska offers giant bubble shows, face painting, balloon twisting, juggling, clowning, miming, LED manipulation, fire object manipulation with props like levi wand and buugeng, fire eating, fire breathing and circus sideshow acts such as dangerous blockhead and dangerous bed of nails."
+        "text": "Saria \u201cBlu\u201d Braska offers giant bubble shows, face painting, balloon twisting, juggling, clowning, miming, LED manipulation, fire object manipulation with props like levi wand and buugeng, fire eating, fire breathing and circus sideshow acts such as dangerous blockhead and dangerous bed of nails. Serving Northeast Ohio (near Cleveland & Columbus), plus Detroit & Pittsburgh bookings."
       }
     },
     {
       "@type": "Question",
-      "name": "Do you travel outside of Virginia Beach?",
+      "name": "Do you travel outside of Northeast Ohio (near Cleveland & Columbus)?",
       "acceptedAnswer": {
         "@type": "Answer",
-        "text": "Yes. Whimsy Entertainment is based in Virginia Beach but can travel across Virginia and to other states for the right event. Travel fees may apply depending on distance and schedule."
+        "text": "Yes. Whimsy Entertainment is based in Northeast Ohio (near Cleveland & Columbus) but can travel across Ohio, including Detroit and Pittsburgh area bookings, and to other states for the right event. Travel fees may apply depending on distance and schedule. Serving Northeast Ohio (near Cleveland & Columbus), plus Detroit & Pittsburgh bookings."
       }
     },
     {
@@ -50,7 +50,7 @@
       "name": "Are fire and sideshow acts safe?",
       "acceptedAnswer": {
         "@type": "Answer",
-        "text": "Safety is always the priority. Fire eating, fire breathing and fire object manipulation are only performed where venue rules, weather, space and safety conditions allow. Sideshow acts like dangerous blockhead and dangerous bed of nails are performed by an experienced professional with over 10 years on stage."
+        "text": "Safety is always the priority. Fire eating, fire breathing and fire object manipulation are only performed where venue rules, weather, space and safety conditions allow. Sideshow acts like dangerous blockhead and dangerous bed of nails are performed by an experienced professional with over 10 years on stage. Serving Northeast Ohio (near Cleveland & Columbus), plus Detroit & Pittsburgh bookings."
       }
     },
     {
@@ -58,7 +58,7 @@
       "name": "What do you need from the venue or host?",
       "acceptedAnswer": {
         "@type": "Answer",
-        "text": "For most kids party and roaming sets, Whimsy Entertainment mainly needs enough space to move safely, a small setup area and protection from extreme weather. Fire and LED acts may require a clear performance area, distance from the audience and specific venue permissions."
+        "text": "For most kids party and roaming sets, Whimsy Entertainment mainly needs enough space to move safely, a small setup area and protection from extreme weather. Fire and LED acts may require a clear performance area, distance from the audience and specific venue permissions. Serving Northeast Ohio (near Cleveland & Columbus), plus Detroit & Pittsburgh bookings."
       }
     },
     {
@@ -66,12 +66,12 @@
       "name": "How far in advance should we book?",
       "acceptedAnswer": {
         "@type": "Answer",
-        "text": "Booking a few weeks to a few months in advance is recommended, especially for weekends and holidays. However, last-minute dates sometimes open up, so it is always worth asking about your preferred date."
+        "text": "Booking a few weeks to a few months in advance is recommended, especially for weekends and holidays. However, last-minute dates sometimes open up, so it is always worth asking about your preferred date. Serving Northeast Ohio (near Cleveland & Columbus), plus Detroit & Pittsburgh bookings."
       }
     }
   ]
 }
-    </script>
+</script>
 
   </head>
   <body>
@@ -100,7 +100,7 @@
         <div class="section-title">Services</div>
         <h1 class="section-heading">Pick your flavor of whimsy.</h1>
         <p class="section-desc">
-          Whimsy Entertainment offers professional party entertainment in Virginia Beach, Virginia and throughout America: kids birthday party packages,
+          Whimsy Entertainment offers professional party entertainment serving Northeast Ohio (near Cleveland & Columbus), with availability for Detroit and Pittsburgh bookings, and nationwide for select events: kids birthday party packages,
           balloon twisting, face painting, juggling workshops, circus sideshow, LED and fire performances. Mix and match services to build the
           perfect entertainment lineup for your party, festival, school program, bar or club night, corporate event or grand opening.
         </p>
@@ -174,7 +174,7 @@
             <h5>What kinds of events do you perform at?</h5>
             <p>Whimsy Entertainment is available for children’s birthday parties, family events, school and library shows, community festivals,
             corporate events, holiday parties, nightlife and concerts, private parties and more. If your event could use live circus, clown,
-            mime, fire or variety entertainment in Virginia Beach or anywhere in Virginia, we can probably help.</p>
+            mime, fire or variety entertainment in Northeast Ohio (near Cleveland & Columbus) across Northeast Ohio (near Cleveland & Columbus), plus Detroit and Pittsburgh, we can probably help.</p>
           </div>
 
           <div class="card-whimsy mt-3">
@@ -186,8 +186,8 @@
           </div>
 
           <div class="card-whimsy mt-3">
-            <h5>Do you travel outside of Virginia Beach?</h5>
-            <p>Yes. Whimsy Entertainment is based in Virginia Beach but can travel across Virginia and to other states for the right event.
+            <h5>Do you travel outside of Northeast Ohio (near Cleveland & Columbus)?</h5>
+            <p>Yes. Whimsy Entertainment is based in Northeast Ohio (near Cleveland & Columbus) but can travel across Ohio, including Detroit and Pittsburgh area bookings, and to other states for the right event.
             Travel fees may apply depending on distance and schedule. Let us know your city and venue and we’ll include travel details in your quote.</p>
           </div>
 
@@ -217,7 +217,7 @@
     
 <footer>
   <div>© 2025 Whimsy Entertainment. All rights reserved.</div>
-  <div>Based in Virginia Beach · Traveling nationwide for events.</div>
+  <div>Based in Northeast Ohio (near Cleveland & Columbus) · Available for Detroit & Pittsburgh · Traveling nationwide for select events.</div>
 </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
