--- a/about.html
+++ b/about.html
@@ -10,39 +10,66 @@
   gtag('config', 'G-34Q15NH8XG');
 </script>
     <meta charset="utf-8">
-    <title>About Saria "Blu" Braska | Whimsy Entertainment Virginia Beach Circus & Party Entertainment</title>
+    <title>About Saria "Blu" Braska | Whimsy Entertainment Northeast Ohio (near Cleveland & Columbus), Detroit & Pittsburgh Circus & Party Entertainment</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Learn about Saria “Blu” Braska of Whimsy Entertainment in Virginia Beach. A circus clown, juggler and variety entertainer with 10+ years of experience offering kids party entertainment, juggling workshops, giant bubbles, face painting, balloon twisting, fire eating, fire breathing, LED shows, levi wand, buugeng and circus sideshow acts.">
+    <meta name="description" content="Learn about Saria “Blu” Braska of Whimsy Entertainment serving Northeast Ohio (near Cleveland & Columbus), Detroit and Pittsburgh. A circus clown, juggler and variety entertainer with 10+ years of experience offering kids party entertainment, juggling workshops, giant bubbles, face painting, balloon twisting, fire eating, fire breathing, LED shows, levi wand, buugeng and circus sideshow acts.">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
 
     <!-- Person / Performer schema -->
     <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "Person",
-      "name": "Saria \"Blu\" Braska",
-      "alternateName": "Blu",
-      "jobTitle": "Circus performer, clown, juggler and variety entertainer",
-      "worksFor": {
-        "@type": "EntertainmentBusiness",
-        "name": "Whimsy Entertainment"
+{
+  "@context": "https://schema.org",
+  "@type": "Person",
+  "name": "Saria \"Blu\" Braska",
+  "alternateName": "Blu",
+  "jobTitle": "Circus performer, clown, juggler and variety entertainer (Ohio · Detroit · Pittsburgh)",
+  "worksFor": {
+    "@type": "EntertainmentBusiness",
+    "name": "Whimsy Entertainment",
+    "areaServed": [
+      {
+        "@type": "State",
+        "name": "Ohio"
       },
-      "email": "mailto:neonravee@yahoo.com",
-      "telephone": "+1-757-257-3445",
-      "url": "https://whimsyentertainment.com",
-      "address": {
-        "@type": "PostalAddress",
-        "addressLocality": "Virginia Beach",
-        "addressRegion": "VA",
-        "addressCountry": "US"
+      {
+        "@type": "City",
+        "name": "Cleveland"
       },
-      "sameAs": [
-        "https://facebook.com/whimsyentertainment",
-        "https://instagram.com/whimsyvoid"
-      ]
-    }
-    </script>
+      {
+        "@type": "City",
+        "name": "Columbus"
+      },
+      {
+        "@type": "City",
+        "name": "Detroit"
+      },
+      {
+        "@type": "City",
+        "name": "Pittsburgh"
+      },
+      {
+        "@type": "Country",
+        "name": "United States"
+      }
+    ],
+    "description": "Circus-style party entertainment serving Northeast Ohio (near Cleveland & Columbus), Detroit and Pittsburgh, with nationwide travel for select events."
+  },
+  "email": "mailto:neonravee@yahoo.com",
+  "telephone": "+1-757-257-3445",
+  "url": "https://whimsyentertainment.com",
+  "address": {
+    "@type": "PostalAddress",
+    "addressLocality": "Northeast Ohio (near Cleveland & Columbus)",
+    "addressRegion": "OH",
+    "addressCountry": "US"
+  },
+  "sameAs": [
+    "https://facebook.com/whimsyentertainment",
+    "https://instagram.com/whimsyvoid"
+  ]
+}
+</script>
   </head>
   <body>
 
@@ -74,7 +101,7 @@
     <section class="hero-about card-hero">
       <div class="hero-about-main">
         <h1 class="hero-about-heading">Saria “Blu” Braska</h1>
-        <p class="hero-about-subtitle">Virginia Beach–based circus clown, juggler and variety entertainer with 10+ years of experience performing across America.</p>
+        <p class="hero-about-subtitle">Northeast Ohio (near Cleveland & Columbus)–based circus clown, juggler and variety entertainer — available for Detroit & Pittsburgh bookings — with 10+ years of experience performing across America.</p>
         <p class="hero-about-body">
           Under the name <strong>Whimsy Entertainment</strong>, Blu brings high-energy circus magic to children’s parties, festivals, nightlife, corporate events and community celebrations. From gentle, whimsical kids party entertainment to bold fire and sideshow shows, every booking is tailored to your crowd, venue and comfort level.
         </p>
@@ -82,7 +109,7 @@
         <div class="hero-chip-row">
           <span class="hero-chip">10+ years on stage</span>
           <span class="hero-chip">Kids parties · Festivals · Nightlife</span>
-          <span class="hero-chip">Virginia Beach · Traveling nationwide</span>
+          <span class="hero-chip">Northeast Ohio (near Cleveland & Columbus) · Detroit & Pittsburgh · Traveling nationwide</span>
         </div>
 
         <div class="hero-actions">
@@ -138,7 +165,7 @@
           <p><strong>Name:</strong> Saria “Blu” Braska (Whimsy Entertainment)</p>
           <p><strong>Experience:</strong> 10+ years of circus and party entertainment with gigs across America.</p>
           <p><strong>Acts available:</strong> clowning, miming, juggling, giant bubbles, face painting, balloon twisting, LED and fire object manipulation (including levi wand and buugeng in both fire and LED formats), fire eating, fire breathing, very dangerous blockhead, world renown bed of nails and more.</p>
-          <p><strong>Based in:</strong> Virginia Beach, Virginia &mdash; available for travel across Virginia and nationwide for the right event.</p>
+          <p><strong>Based in:</strong> Northeast Ohio (near Cleveland & Columbus) &mdash; available across Ohio, including Detroit & Pittsburgh area bookings, and nationwide for the right event.</p>
         </div>
 
         <div class="card-whimsy">
@@ -172,11 +199,12 @@
 
   </div>
 </main>
-
 <footer>
-  <div>© 2025 Whimsy Entertainment. All rights reserved.</div>
-  <div>Based in Virginia Beach · Traveling nationwide for events.</div>
+  <div>© 2026 Whimsy Entertainment. All rights reserved.</div>
+  <div>Serving Northeast Ohio (near Cleveland & Columbus) · Available for Detroit &amp; Pittsburgh area bookings · Traveling nationwide for select events.</div>
 </footer>
+
+
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
