--- a/contact.html
+++ b/contact.html
@@ -10,9 +10,9 @@
   gtag('config', 'G-34Q15NH8XG');
 </script>
     <meta charset="utf-8">
-    <title>Contact Whimsy Entertainment | Book Bubbles, Balloons, Face Painting & Fire Shows in Virginia</title>
+    <title>Contact Whimsy Entertainment | Book Bubbles, Balloons, Face Painting & Fire Shows in Ohio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Contact Whimsy Entertainment to book circus-style entertainment across Virginia.">
+    <meta name="description" content="Contact Whimsy Entertainment to book circus-style entertainment across Ohio.">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
   </head>
@@ -121,10 +121,7 @@
   </div>
 </main>
 
-<footer>
-  <div>© 2025 Whimsy Entertainment. All rights reserved.</div>
-  <div>Based in Virginia Beach · Traveling nationwide for events.</div>
-</footer>
+Serving Northeast Ohio (near Cleveland & Columbus) · Available for Detroit & Pittsburgh area bookings.
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
